# actix-web-project-template

./: .env.sample  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  handlers.rs  main.rs  models.rs  routes.rs
