[package]
name = "actix_sandbox"
version = "0.1.0"
authors = ["stefan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
config = "0.10"
dotenv = "0.15"
env_logger = "0.7"
serde = "1.0"
